--- a/Esami/Duemilaventitre/trenta_giugno/database/connector.cnf
+++ b/Esami/Duemilaventitre/trenta_giugno/database/connector.cnf
@@ -1,6 +1,6 @@
 [client]
 user=root
-password=Juventus1.
+password=05042003Matteo
 host=127.0.0.1
 database=lahmansbaseballdb
 raise_on_warnings=True
